# games_c

./: .gitignore  README.md  exec_win.ps1
chess/: CMakeLists.txt  README.md  todo.md
chess/include/: debug.h  game.h  graph.h  input.h
chess/src/: chess.c  debug.c  game.c  graph.c  graph.h  input.c
jogo-da-velha/: README.md  jogo-da-velha.c
space-kid/: CMakeLists.txt  README.md
space-kid/include/: defs.h  game.h  graph.h  map.h  physics.h
space-kid/src/: game.c  graph.c  map.c  physics.c  space-kid.c
